@@ -233,7 +233,7 @@
 192,-1,6,1,-1,0,0,10,1,no,0,0x2,0,weapon,0	//NPC_MAGICALATTACK#Demon Shock Attack#
 193,0,0,4,0,0x1,0,10,1,no,0,0x2,0,none,0	//NPC_METAMORPHOSIS#Metamorphosis#
 194,0,0,4,0,0x1,0,10,1,no,0,0x2,0,none,0	//NPC_PROVOCATION#Provocation#
-195,0,6,4,0,0xD0,0,10,1,no,0,0x2,0,misc,0	//NPC_SMOKING#Smoking#
+195,0,6,4,0,0x50,0,10,1,no,0,0x2,0,misc,0	//NPC_SMOKING#Smoking#
 196,0,0,4,0,0x1,0,10,1,no,0,0x2,0,magic,0	//NPC_SUMMONSLAVE#Follower Summons#
 197,0,0,4,0,0x1,0,10,1,no,0,0x2,0,none,0	//NPC_EMOTION#Emotion#
 198,0,0,4,0,0x1,0,10,1,no,0,0x2,0,magic,0	//NPC_TRANSFORMATION#Transformation#
@@ -539,7 +539,7 @@
 498,0,6,4,0,0x1,0,1,0,no,0,0x8,0,none,0	//AM_TWILIGHT3#Twilight Alchemy 3#
 499,-9,8,4,-1,0,0,1,2,no,0,0x208,0,weapon,0	//HT_POWER#Beast Strafing#
 500,0,6,4,0,0x40,0,5,1,no,0,0,0,misc,0	//GS_GLITTERING#Flip the Coin#
-501,9,6,1,-1,0xD0,0,1,1,no,0,0,0,misc,0	//GS_FLING#Fling#
+501,9,6,1,-1,0x50,0,1,1,no,0,0,0,misc,0	//GS_FLING#Fling#
 502,-9,8,1,-1,0,0,1,3,no,0,0,0,weapon,0	//GS_TRIPLEACTION#Triple Action#
 503,-9,6,1,-1,0x8,0,1,1,no,0,0,0,weapon,0	//GS_BULLSEYE#Bulls Eye#
 504,0,6,4,0,0x1,0,1,1,no,0,0,0,weapon,0	//GS_MADNESSCANCEL#Madness Canceler#
@@ -564,7 +564,7 @@
 523,9,6,1,-1,0x40,0,10,1,no,0,0,0,weapon,0	//NJ_SYURIKEN#NJ_SYURIKEN#
 524,9,8,1,-1,0x40,0,5,3,no,0,0,0,weapon,0	//NJ_KUNAI#NJ_KUNAI#
 525,9,8,1,-1,0x6,1,5,-3:-3:-4:-4:-5,yes,0,0,0,weapon,0	//NJ_HUUMA#NJ_HUUMA#
-526,9,6,1,0,0xD0,0,10,1,no,0,0,0,misc,0	//NJ_ZENYNAGE#NJ_ZENYNAGE#
+526,9,6,1,0,0x50,0,10,1,no,0,0,0,misc,0	//NJ_ZENYNAGE#NJ_ZENYNAGE#
 527,0,6,4,-1,0,0,5,1,no,0,0,0,weapon,3	//NJ_TATAMIGAESHI#NJ_TATAMIGAESHI#
 528,-1,6,1,-1,0,0,10,1,no,0,0,0,weapon,0	//NJ_KASUMIKIRI#NJ_KASUMIKIRI#
 529,7:9:11:13:15,6,2,0,0x1,0,5,1,no,0,0,0,none,0	//NJ_SHADOWJUMP#NJ_SHADOWJUMP#
